# vlibs

./: LICENSE.LGPL3  Questions_and_tasks.txt  README  add_lgpl_and_del_builds
SANDBOX/tuple_args/test_ii/: CMakeLists.txt  main.cpp
VgeometrY/: vgeometry.cmake  vgeometry.pri  vpoint.cpp
add_lgpl_and_del_builds_src/: add_lgpl_and_del_builds.pro  including_lgpl_part_00.txt  main.cpp  resources.qrc  tables_form.cpp  tables_form.h  tables_form.ui
build_tool/: build.sh  main.py  template.cmake  template.pri
c++11/: c++11.cmake
cv_modules/: calibration.cpp  calibration.hpp  clusterizator.cpp  clusterizator.hpp  cv_modules.pri  data_agregator.cpp  data_agregator.hpp  disparity_calculator.cpp  disparity_calculator.hpp  dnn.cpp  dnn.hpp  ml.cpp  ml.hpp  profiler.cpp  profiler.hpp  projection_creator.cpp  projection_creator.hpp  range.hpp  stereo_handler.cpp  stereo_handler.hpp  stereo_pair_builder.cpp  stereo_pair_builder.hpp  stereo_pairbuilder.hpp  stereopairbuilder.cpp  viz.cpp  viz.hpp
hdlc_parser/: hdlc_parser.cmake  hdlc_parser.cpp  hdlc_parser.h  hdlc_parser.pri
ishumi/: ishumi.cmake  ishumi.pri
json11/: json11.cmake  json11.cpp  json11.pri
map2d_widget/: map2d_widget.cpp  map2d_widget.h  map2d_widget.pri
nio_wrap/: c_errno.cpp_old  c_errno.h  nbytes.cpp  nbytes.h  ncancellable.cpp  ncancellable.h  nerror.cpp  nerror.h  nfifo.cpp_old  nfifo.h_old  nfile.cpp  nfile.h  nfileinfo.cpp  nfileinfo.h  nio_wrap.cmake  nio_wrap.pri  nkeyfile.cpp  nkeyfile.h  nkeyfile_schema.cpp  nkeyfile_schema.h  nmainloop.cpp  nmainloop.h  nobject.cpp  nobject.h  nstreams.cpp  nstreams.h  nversion.cpp  nversion.h  threadsafe_unordered_map.cpp  threadsafe_unordered_map.h  vkeyfile.cpp  vkeyfile.h  vsignal.h
nio_wrap/nkeyfile_build_lib/: CMakeLists.txt
qcustomplot/: qcustomplot.cmake  qcustomplot.h  qcustomplot.pri  samples.txt  vcustomplot.cpp  vcustomplot.h
qt-vsettings/: qt-vsettings.pri  vsettings.cpp  vsettings.h  zzz__vsettings_interface.cpp  zzz__vsettings_interface.h
qt_pretty_build/: qt_pretty_build.pri  qt_pretty_build_for_tests.pri
qt_vinvoke/: qt_vinvoke.cmake  qt_vinvoke.cpp  qt_vinvoke.h  qt_vinvoke.pri
sqlite3pp/: sqlite3pp.cmake  sqlite3pp.pri
tests/: CMakeLists.txt  README  run_all_tests.sh  run_all_tests_qt.sh  vlibs
tests/QtTests/: QtTests.pro  test_vapplication_qt
vapp_args_parser/: vapp_args_parser.cmake  vapp_args_parser.cpp  vapp_args_parser.h  vapp_args_parser.pri
vapplication/: README  vapplication.cmake  vapplication.cpp  vapplication.h  vapplication.pri
varg/: varg.cmake  varg.cpp  varg.h  varg.pri
vbitarray/: vbitarray.cmake  vbitarray.cpp  vbitarray.h  vbitarray.pri
vbitmessage/: vbitmessage.cmake  vbitmessage.pri  voutbitmessage.cpp  voutbitmessage.h
vbytearray/: vbytearray.cmake  vbytearray.cpp  vbytearray.h  vbytearray.pri
vcallback/: vcallback.cmake  vcallback.h  vcallback.pri
vcat/: README  _vcat_iface.h  vcat.cmake  vcat.cpp  vcat.h  vcat.pri  vcat_containers.h  vcat_iface.cpp  vcat_iface.h  vcat_tuple.h
vchrono/: vchrono.cmake  vchrono.h  vchrono.h_old  vchrono.pri  vchrono_weeks.h  vtimemeter.cpp  vtimemeter.h  vtimepoint.cpp  vtimepoint.h
vchrono/test_vchrono/: CMakeLists.txt  main.cpp
vcrc/: README  vcrc.cmake  vcrc.cpp  vcrc.h  vcrc.pri
vdatetime/: vdatetime.cmake  vdatetime.cpp  vdatetime.h  vdatetime.pri
vdir/: vdir.cmake  vdir.cpp  vdir.h  vdir.pri
vfile/: vfile.cmake  vfile.cpp  vfile.h  vfile.pri
vgeometry/: README.md  vfloatpoint2d.cpp  vfloatpoint2d.h  vgeometry.cmake  vgeometry.pri  vinterval.h  vline.h  vpoint.cpp  vpoint.h  vpoints.h  vpolardbscan.cpp  vpolardbscan.h  vtransformation.cpp  vtransformation.h
vgeometry/test_vgeometry/: CMakeLists.txt  test_vinterval.cpp  test_vpoints.cpp  test_vtransformation.cpp
vgeometry/tests/: CMakeLists.txt  test_vtransformation.cpp
vgio/: README
vgio/keyfile/test_keyfile/: CMakeLists.txt  main.cpp
vgit/: README  vgit.cmake  vgit.cpp  vgit.h  vgit.pri  vgit_catcher.h  vgit_impl.cmake  vgit_impl.pri  vgit_post.cmake  vgitversioning.cpp  vgitversioning.h
vgit_old/: vgit.pri  vgitversioning.cpp
vgpioleg/: vgpioleg.cmake  vgpioleg.cpp  vgpioleg.h  vgpioleg.pri
vgstreamer/: README  rtp_sink.cpp  rtp_sink.h  rtp_sink_qt.cpp  rtp_sink_qt.h  vgobject.cpp  vgobject.h  vgst_init.cpp  vgst_init.h  vgstappsink.cpp  vgstappsink.h  vgstbin.cpp  vgstbin.h  vgstbuffer.cpp  vgstbuffer.h  vgstcaps.cpp  vgstcaps.h  vgstcapsfilter.cpp  vgstcapsfilter.h  vgstelement.cpp  vgstelement.h  vgstlibav.cpp  vgstlibav.h  vgstmapinfo.cpp  vgstmapinfo.h  vgstpipeline.cpp  vgstpipeline.h  vgstreamer.cmake  vgstreamer.pri  vgstreamer_qt.pri  vgstrtph264depay.cpp  vgstrtph264depay.h  vgstsample.cpp  vgstsample.h  vgststructure.cpp  vgststructure.h  vgstudpsrc.cpp  vgstudpsrc.h  vgstvideoconvert.cpp  vgstvideoconvert.h
vhdlc/: vhdlc.cmake  vhdlc.cpp  vhdlc.h  vhdlc.pri
vimage/: .gitignore  abstract_vimage_supplier.h  vcvimage_impl.cpp  vcvimage_impl.h  vimage.cmake  vimage.cpp  vimage.h  vimage.pri  vimage_opencv.cmake  vimage_opencv.cmake.tmp  vimage_opencv.cpp  vimage_opencv.h  vimage_opencv.pri  vimage_opencv_dev1.cpp  vimage_opencv_dev1.h  vimage_opencv_dev1.pri  vimage_qt.cpp  vimage_qt.h  vimage_qt.pri  vimage_zcm.cmake  vimage_zcm.cpp  vimage_zcm.h  vimage_zcm.pri  vqimage_impl.cpp  vqimage_impl.h  vqimageimpl.cpp  vqimageimpl.h  z_image.cpp  z_image.h  zzz_z_image.h  zzzzz_ZCM_Image.hpp
vimagewidget/: vimagewidget.cpp  vimagewidget.h  vimagewidget.pri
vinvokers/: vinvokers.cpp  vinvokers.h  vinvokers.pri
vjpeg/: vdir.cmake  vjpeg.cmake  vjpeg.cpp  vjpeg.h  vjpeg.pri
vlog/: README  readme.md  readme.txt  verror.cpp  verror.h  vfilelog.cmake  vfilelog.cpp  vfilelog.h  vfilelog.pri  vfilelog_keyfile.cpp  vfilelog_keyfile.h  vfilelog_keyfile.pri  vfilelog_threaded.cpp  vfilelog_threaded.h  vlog.cmake  vlog.h  vlog.pri  vlog_pretty.cpp  vlog_pretty.h  vlog_qt.cpp  vlog_qt.h  vlog_qt.pri  vlogentry.cpp  vlogentry.h  vlogger.cpp  vlogger.h  vsyslogger.cpp  vsyslogger.h
vlog/cmake_example_vlog/: CMakeLists.txt  main.cpp
vlogger/: vlogger.cmake  vlogger.cpp  (+2 more)
(+449 files in other folders)
